feat/initial commit

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
   "recommendations": [
     "hashicorp.terraform",
-    "EditorConfig.EditorConfig"
+    "editorconfig.editorconfig",
+    "azapi-vscode.azapi"
   ]
 }
