--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ override.tf.json
 # Include override files you do wish to add to version control using negated pattern
 # !example_override.tf
 
+# Ignore Terraform lock file
+.terraform.lock.hcl
+
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
 
